--- a/index.css
+++ b/index.css
@@ -10,18 +10,20 @@ body {
 }
 .cart-item {
   display: inline-flex;
-  margin: 20px 10px;
+  margin: 20px 20px;
 }
 .cart-item .right-block {
   padding: 0 20px;
+  margin: 10px 20px;
+  font-size: 25px;
 }
 .cart-item-actions {
   margin-top: 20px;
 }
 .action-icons {
-  height: 25px;
-  width: 25px;
-  margin-right: 10px;
+  height: 45px;
+  width: 45px;
+  margin-right: 15px;
 }
 .action-icons:hover {
   cursor: pointer;
